guestbook/gb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gb-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx-nci-service-ingress-default
    meta.helm.sh/release-name: gb
    meta.helm.sh/release-namespace: gb
  selfLink: >-
    /apis/networking.k8s.io/v1/namespaces/default/ingresses/gb-ingress
spec:
  tls:
    - hosts:
        - kibana.mcs-pta.mcs.expandium.com
  rules:
    - host: kibana.mcs-pta.mcs.expandium.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook-ui
                port:
                  number: 80
